--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <link rel="preload" href="./fonts/Roboto-Regular.woff2" as="font" crossorigin="anonymous" type="font/woff2">
   <link rel="preload" href="./fonts/Roboto-Medium.woff2" as="font" crossorigin="anonymous" type="font/woff2">
   <link rel="preload" href="./fonts/Roboto-Bold.woff2" as="font" crossorigin="anonymous" type="font/woff2">
+  <link rel="icon" type="image/svg+xml" sizes="any" href="./img/any.svg">
   <link rel="stylesheet" href="./css/style.min.css">
   <title>YourTour</title>
 </head>
@@ -42,7 +43,7 @@
     </nav>
     <div class="header__title-wrapper">
       <h1 class="header__title">Идеальные путешествия существуют</h1>
-      <p class="header__description">Идейные соображения высшего порядка, а также рамки и место обучения кадров</p>
+      <p class="header__description description">Идейные соображения высшего порядка, а также рамки и место обучения кадров</p>
       <a class="header__link" href="#">Найти тур</a>
     </div>
   </header>
@@ -56,37 +57,38 @@
               Популярные
             </a>
           </li>
-          <li class="tour__item" href="#">
-            <a class="tour__link" href="">
+          <li class="tour__item">
+            <a class="tour__link" href="#">
               Авторские
             </a>
           </li>
           <li class="tour__item">
-            <a class="tour__link" href="">
+            <a class="tour__link" href="#">
               Походы
             </a>
           </li>
           <li class="tour__item">
-            <a class="tour__link" href="">
+            <a class="tour__link" href="#">
               Сплавы
             </a>
           </li>
           <li class="tour__item">
-            <a class="tour__link" href="">
+            <a class="tour__link" href="#">
               Велопрогулки
             </a>
           </li>
         </ul>
-
         <div class="card">
           <ul class="card__list">
             <li class="card__item">
-              <picture>
-                <source type="image/webp" srcset="./img/card-tour-photo-1.webp 1x, ./img/card-tour-photo-1@2x.webp 2x">
-                <img class="card__link" src="./img/card-tour-photo-1.jpg" srcset="./img/card-tour-photo-1@2x.jpg 2x" decoding="async" alt="Фотография машины.">
-              </picture>
+              <a class="card__link" href="#">
+                <picture>
+                  <source type="image/webp" srcset="./img/card-tour-photo-1.webp 1x, ./img/card-tour-photo-1@2x.webp 2x">
+                  <img src="./img/card-tour-photo-1.jpg" srcset="./img/card-tour-photo-1@2x.jpg 2x" decoding="async" alt="Фотография машины.">
+                </picture>
+              </a>
               <div class="card__info">
-                <h3 class="card__title">Путешествие в горы</h3>
+                <h3 class="card__title">Путешествие в&nbsp;горы</h3>
                 <b class="card__price">от 80 000 руб</b>
                 <a class="card__button" href="#" >
                   Подробнее
@@ -97,12 +99,14 @@
               </div>
             </li>
             <li class="card__item">
-              <picture>
-                <source type="image/webp" srcset="./img/card-tour-photo-2.webp 1x, ./img/card-tour-photo-2@2x.webp 2x">
-                <img class="card__link" src="./img/card-tour-photo-2.jpg" srcset="./img/card-tour-photo-2@2x.jpg 2x" decoding="async" alt="Девушка в пустыне.">
-              </picture>
+              <a href="#" class="card__link">
+                <picture>
+                  <source type="image/webp" srcset="./img/card-tour-photo-2.webp 1x, ./img/card-tour-photo-2@2x.webp 2x">
+                  <img src="./img/card-tour-photo-2.jpg" srcset="./img/card-tour-photo-2@2x.jpg 2x" decoding="async" alt="Девушка в пустыне.">
+                </picture>
+              </a>
             <div class="card__info">
-              <h3 class="card__title">Путешествие в горы</h3>
+              <h3 class="card__title">Путешествие в&nbsp;горы</h3>
               <b class="card__price">от 80 000 руб</b>
               <a class="card__button" href="#" >
                 Подробнее
@@ -113,12 +117,14 @@
             </div>
             </li>
             <li class="card__item">
-              <picture>
-                <source type="image/webp" srcset="./img/card-tour-photo-3.webp 1x, ./img/card-tour-photo-3@2x.webp 2x">
-                <img class="card__link" src="./img/card-tour-photo-3.jpg" srcset="./img/card-tour-photo-3@2x.jpg 2x" decoding="async" alt="Горы.">
-              </picture>
+              <a class="card__link" href="#">
+                <picture>
+                  <source type="image/webp" srcset="./img/card-tour-photo-3.webp 1x, ./img/card-tour-photo-3@2x.webp 2x">
+                  <img src="./img/card-tour-photo-3.jpg" srcset="./img/card-tour-photo-3@2x.jpg 2x" decoding="async" alt="Горы.">
+                </picture>
+              </a>
             <div class="card__info">
-              <h3 class="card__title">Путешествие в горы</h3>
+              <h3 class="card__title">Путешествие в&nbsp;горы</h3>
               <b class="card__price">от 80 000 руб</b>
               <a class="card__button" href="#" >
                 Подробнее
@@ -129,12 +135,14 @@
             </div>
             </li>
             <li class="card__item">
-              <picture>
-                <source type="image/webp" srcset="./img/card-tour-photo-4.webp 1x, ./img/card-tour-photo-4@2x.webp 2x">
-                <img class="card__link" src="./img/card-tour-photo-4.jpg" srcset="./img/card-tour-photo-4@2x.jpg 2x" decoding="async" alt="Город.">
-              </picture>
+              <a class="card__link" href="#">
+                <picture>
+                  <source type="image/webp" srcset="./img/card-tour-photo-4.webp 1x, ./img/card-tour-photo-4@2x.webp 2x">
+                  <img src="./img/card-tour-photo-4.jpg" srcset="./img/card-tour-photo-4@2x.jpg 2x" decoding="async" alt="Город.">
+                </picture>
+              </a>
             <div class="card__info">
-              <h3 class="card__title">Путешествие в горы</h3>
+              <h3 class="card__title">Путешествие в&nbsp;горы</h3>
               <b class="card__price">от 80 000 руб</b>
               <a class="card__button" href="#" >
                 Подробнее
@@ -145,12 +153,14 @@
             </div>
             </li>
             <li class="card__item">
-              <picture>
-                <source type="image/webp" srcset="./img/card-tour-photo-5.webp 1x, ./img/card-tour-photo-5@2x.webp 2x">
-                <img class="card__link" src="./img/card-tour-photo-5.jpg" srcset="./img/card-tour-photo-5@2x.jpg 2x" decoding="async" alt="Пляж.">
-              </picture>
+              <a class="card__link" href="#">
+                <picture>
+                  <source type="image/webp" srcset="./img/card-tour-photo-5.webp 1x, ./img/card-tour-photo-5@2x.webp 2x">
+                  <img src="./img/card-tour-photo-5.jpg" srcset="./img/card-tour-photo-5@2x.jpg 2x" decoding="async" alt="Пляж.">
+                </picture>
+              </a>
             <div class="card__info">
-              <h3 class="card__title">Путешествие в горы</h3>
+              <h3 class="card__title">Путешествие в&nbsp;горы</h3>
               <b class="card__price">от 80 000 руб</b>
               <a class="card__button" href="#" >
                 Подробнее
@@ -161,11 +171,12 @@
             </div>
             </li>
             <li class="card__item">
-              <picture>
-                <source type="image/webp" srcset="./img/card-tour-photo-6.webp 1x, ./img/card-tour-photo-6@2x.webp 2x">
-                <img class="card__link" src="./img/card-tour-photo-6.jpg" srcset="./img/card-tour-photo-6@2x.jpg 2x" decoding="async" alt="Озеро.">
-              </picture>
-
+              <a class="card__link" href="#">
+                <picture>
+                  <source type="image/webp" srcset="./img/card-tour-photo-6.webp 1x, ./img/card-tour-photo-6@2x.webp 2x">
+                  <img src="./img/card-tour-photo-6.jpg" srcset="./img/card-tour-photo-6@2x.jpg 2x" decoding="async" alt="Озеро.">
+                </picture>
+              </a>
             <div class="card__info">
               <h3 class="card__title">Путешествие в горы</h3>
               <b class="card__price">от 80 000 руб</b>
@@ -180,6 +191,184 @@
           </ul>
         </div>
       </div>
+    </section>
+    <section class="form-tour tour">
+      <div class="wrapper">
+        <h2 class="form-tour__title title">Собери свой тур</h2>
+        <p class="form-tour__description description">Идейные соображения высшего порядка, а также рамки и место обучения кадров</p>
+        <form class="form" action="" method="post">
+          <fieldset class="form__group">
+            <ul class="form__list">
+              <li class="form__item">
+                <label class="form__field" for="">
+                  <span class="form__field-title">Имя</span>
+                  <input class="form__input" type="text" placeholder="Введите Ваше имя" name="name" id="name" required>
+                </label>
+              </li>
+              <li class="form__item">
+                <label class="form__field" for="">
+                  <span class="form__field-title">Направление</span>
+                  <select class="form__input form__select" name="tour:" id="form__select" placeholder="Куда хотите ехать" required>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                  </select>
+                </label>
+              </li>
+              <li class="form__item">
+                <label class="form__field" for="">
+                  <span class="form__field-title">Email</span>
+                  <input class="form__input" type="email" name="email" id="email" placeholder="example@mail.com" required>
+                </label>
+              </li>
+              <li class="form__item">
+                <label class="form__field" for="">
+                  <span class="form__field-title">Телефон</span>
+                  <input class="form__input" type="tel" name="phone" id="phone" placeholder="+ 7 ( _ _ _ ) _ _ _ - _ _ - _ _" required>
+                </label>
+              </li>
+              <li class="form__item">
+                <label class="form__field" for="">
+                  <span class="form__field-title">Дата от</span>
+                  <input class="form__input" type="date" placeholder="ДД.ММ.ГГГГ" required>
+                </label>
+              </li>
+              <li class="form__item">
+                <label class="form__field" for="">
+                  <span class="form__field-title">Дата до</span>
+                  <input class="form__input" type="date" placeholder="ДД.ММ.ГГГГ" required>
+                </label>
+              </li>
+              <li class="form__item form__item-textarea">
+                <label class="form__field" for="">
+                  <span class="form__field-title">Комментарий</span>
+                  <textarea class="form__input form__textarea" type="text" placeholder="ДД.ММ.ГГГГ" required>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="form__group">
+            <legend class="form__field-title">Вам есть 18 лет?</legend>
+            <ul class="form__list form__list-checkbox">
+              <li class="form__item form__item-checkbox">
+                <label class="form__field-radiobox">
+                  <input class="visually-hidden form__checkbox" type="radio" name="Ответ" value="Да">
+                  <span class="form__checkbox form__checkbox--control"></span>
+                  <span class="form__field-title">Да</span>
+                </label>
+              </li>
+              <li class="form__item form__item-checkbox">
+                <label class="form__field-radiobox">
+                  <input class="visually-hidden form__checkbox" type="radio" name="Ответ" value="Нет">
+                  <span class="form__checkbox form__checkbox--control"></span>
+                  <span class="form__field-title">Нет</span>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="form__group">
+            <label class="form__field-checkbox">
+              <input class="visually-hidden form__input-checkbox" type="checkbox" name="Возраст" id="vin" checked>
+              <span class="form__input-checkbox form__input-checkbox--control"></span>
+              <span class="form__field-title form__field-checkbox-text">Нажимая кнопку, я принимаю условия<a class="form__field-checkbox-link" href="#"> Лицензионного договора</a></span>
+            </label>
+          </fieldset>
+          <div class="form__wrapper-button">
+            <button class="button__sub button" type="submit">Найти тур</button>
+            <button class="button__res button" type="reset">Сбросить</button>
+          </div>
+        </form>
+      </div>
+    </section>
+    <section class="reviews tour">
+      <div class="wrapper">
+        <h2 class="reviews__title title">Собери свой тур</h2>
+        <p class="reviews__description description">Идейные соображения высшего порядка, а также рамки и место обучения кадров</p>
+        <ul class="reviews__list">
+          <li class="reviews__item">
+            <p class="reviews__item-text">Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании новых предложений. Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции позволяет оценить значение модели развития.</p>
+            <div class="reviews__item-info">
+              <h3 class="reviews__item-title">Мария</h3>
+              <span class="reviews__item-description">Тур: Вдали от дома </span>
+              <div class="reviews-avatar">
+                <picture>
+                  <source srcset="./img/avatar-maria.webp 1x, ./img/avatar-maria@2x.webp 2x" type="image/webp">
+                  <img class="reviews__item-avatar" src="./img/avatar-maria.jpg" srcset="./img/avatar-maria@2x.jpg 2x" width="75" height="75" alt="Портрет Марии.">
+                </picture>
+              </div>
+            </div>
+          </li>
+          <li class="reviews__item">
+            <p class="reviews__item-text">Равным образом постоянный количественный рост и сфера нашей активности играет важную роль в формировании системы обучения кадров, соответствует насущным потребностям.
+              <br>
+              Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений. Повседневная практика показывает, что реализация намеченных плановых заданий в значительной степени обуславливает создание модели развития.</p>
+              <div class="reviews__item-info">
+                <h3 class="reviews__item-title">Павел</h3>
+                <span class="reviews__item-description">Тур: Вдали от дома </span>
+                <div class="reviews-avatar">
+                  <picture>
+                    <source srcset="./img/avatar-pavel.webp 1x, ./img/avatar-pavel@2x.webp 2x" type="image/webp">
+                    <img class="reviews__item-avatar" src="./img/avatar-pavel.jpg" srcset="./img/avatar-pavel@2x.jpg 2x" width="75" height="75" alt="Портрет Марии.">
+                  </picture>
+                </div>
+              </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="photo tour">
+      <div class="wrapper">
+        <h2 class="photo__title title">Собери свой тур</h2>
+        <p class="photo__description description">Идейные соображения высшего порядка, а также рамки и место обучения кадров</p>
+      </div>
+
+      <ul class="photo__list">
+        <li class="photo__item">
+          <picture>
+            <source srcset="./img/travel photo-1.webp 1x, ./img/travel photo-1@2x.webp 2x" type="image/webp">
+            <img src="./img/travel photo-1.jpg" srcset="./img/travel photo-1@2x.jpg 2x" alt="Фотография самолета.">
+          </picture>
+        </li>
+        <li class="photo__item">
+          <picture>
+            <source srcset="./img/travel photo-4.webp 1x, ./img/travel photo-4@2x.webp 2x" type="image/webp">
+            <img src="./img/travel photo-4.jpg" srcset="./img/travel photo-4@2x.jpg 2x" alt="Фотография самолета.">
+          </picture>
+        </li>
+      </ul>
+      <ul class="photo__list photo__list--two">
+          <li class="photo__item">
+            <picture>
+              <source srcset="./img/travel photo-5.webp 1x, ./img/travel photo-5@2x.webp 2x" type="image/webp">
+              <img src="./img/travel photo-5.jpg" srcset="./img/travel photo-5@2x.jpg 2x" width="100" height="110" alt="Фотография самолета.">
+            </picture>
+          </li>
+          <li class="photo__item">
+            <picture>
+              <source srcset="./img/travel photo-8.webp 1x, ./img/travel photo-8@2x.webp 2x" type="image/webp">
+              <img src="./img/travel photo-8.jpg" srcset="./img/travel photo-8@2x.jpg 2x" width="100" height="110" alt="Фотография самолета.">
+            </picture>
+          </li>
+          <li class="photo__item">
+            <picture>
+              <source srcset="./img/travel photo-13.webp 1x, ./img/travel photo-13@2x.webp 2x" type="image/webp">
+              <img src="./img/travel photo-13.jpg" srcset="./img/travel photo-13@2x.jpg 2x" width="100" height="110" alt="Фотография самолета.">
+            </picture>
+          </li>
+      </ul>
+      <ul class="photo__list">
+          <li class="photo__item">
+            <picture>
+              <source srcset="./img/travel photo-9.webp 1x, ./img/travel photo-9@2x.webp 2x" type="image/webp">
+              <img src="./img/travel photo-9.jpg" srcset="./img/travel photo-9@2x.jpg 2x" alt="Фотография самолета.">
+            </picture>
+          </li>
+          <li class="photo__item">
+            <picture>
+              <source srcset="./img/travel photo-10.webp 1x, ./img/travel photo-10@2x.webp 2x" type="image/webp">
+              <img src="./img/travel photo-10.jpg" srcset="./img/travel photo-10@2x.jpg 2x" alt="Фотография самолета.">
+            </picture>
+          </li>
+      </ul>
     </section>
   </main>
 </body>
