finished block photo

--- a/src/index.html
+++ b/src/index.html
@@ -328,6 +328,18 @@
             <img src="./img/travel photo-1.jpg" srcset="./img/travel photo-1@2x.jpg 2x" alt="Фотография самолета.">
           </picture>
         </li>
+        <li class="photo__item photo__item--hidden">
+          <picture>
+            <source srcset="./img/travel photo-2.webp 1x, ./img/travel photo-2@2x.webp 2x" type="image/webp">
+            <img src="./img/travel photo-2.jpg" srcset="./img/travel photo-2@2x.jpg 2x" alt="Фотография самолета.">
+          </picture>
+        </li>
+        <li class="photo__item photo__item--close">
+          <picture>
+            <source srcset="./img/travel photo-3.webp 1x, ./img/travel photo-3@2x.webp 2x" type="image/webp">
+            <img src="./img/travel photo-3.jpg" srcset="./img/travel photo-3@2x.jpg 2x" alt="Фотография самолета.">
+          </picture>
+        </li>
         <li class="photo__item">
           <picture>
             <source srcset="./img/travel photo-4.webp 1x, ./img/travel photo-4@2x.webp 2x" type="image/webp">
@@ -335,11 +347,23 @@
           </picture>
         </li>
       </ul>
-      <ul class="photo__list photo__list--two">
+      <ul class="photo__list photo__list--big">
           <li class="photo__item">
             <picture>
               <source srcset="./img/travel photo-5.webp 1x, ./img/travel photo-5@2x.webp 2x" type="image/webp">
               <img src="./img/travel photo-5.jpg" srcset="./img/travel photo-5@2x.jpg 2x" width="100" height="110" alt="Фотография самолета.">
+            </picture>
+          </li>
+          <li class="photo__item photo__item--hidden">
+            <picture>
+              <source srcset="./img/travel photo-6.webp 1x, ./img/travel photo-6@2x.webp 2x" type="image/webp">
+              <img src="./img/travel photo-6.jpg" srcset="./img/travel photo-6@2x.jpg 2x" width="100" height="110" alt="Фотография самолета.">
+            </picture>
+          </li>
+          <li class="photo__item photo__item--close">
+            <picture>
+              <source srcset="./img/travel photo-7.webp 1x, ./img/travel photo-7@2x.webp 2x" type="image/webp">
+              <img src="./img/travel photo-7.jpg" srcset="./img/travel photo-7@2x.jpg 2x" width="100" height="110" alt="Фотография самолета.">
             </picture>
           </li>
           <li class="photo__item">
@@ -366,6 +390,18 @@
             <picture>
               <source srcset="./img/travel photo-10.webp 1x, ./img/travel photo-10@2x.webp 2x" type="image/webp">
               <img src="./img/travel photo-10.jpg" srcset="./img/travel photo-10@2x.jpg 2x" alt="Фотография самолета.">
+            </picture>
+          </li>
+          <li class="photo__item photo__item--close">
+            <picture>
+              <source srcset="./img/travel photo-11.webp 1x, ./img/travel photo-11@2x.webp 2x" type="image/webp">
+              <img src="./img/travel photo-11.jpg" srcset="./img/travel photo-11@2x.jpg 2x" alt="Фотография самолета.">
+            </picture>
+          </li>
+          <li class="photo__item photo__item--hidden">
+            <picture>
+              <source srcset="./img/travel photo-12.webp 1x, ./img/travel photo-12@2x.webp 2x" type="image/webp">
+              <img src="./img/travel photo-12.jpg" srcset="./img/travel photo-12@2x.jpg 2x" alt="Фотография самолета.">
             </picture>
           </li>
       </ul>
