--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,13 @@
   <link rel="preload" href="./fonts/Roboto-Regular.woff2" as="font" crossorigin="anonymous" type="font/woff2">
   <link rel="preload" href="./fonts/Roboto-Medium.woff2" as="font" crossorigin="anonymous" type="font/woff2">
   <link rel="preload" href="./fonts/Roboto-Bold.woff2" as="font" crossorigin="anonymous" type="font/woff2">
-  <link rel="icon" type="image/svg+xml" sizes="any" href="./img/any.svg">
+  <link rel="apple-touch-icon" sizes="60x60" href="./img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
+  <link rel="manifest" href="./site.webmanifest">
+  <link rel="mask-icon" href="./img/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="./css/style.min.css">
   <title>YourTour</title>
 </head>
