fixed pp and added blocks

--- a/src/index.html
+++ b/src/index.html
@@ -70,9 +70,9 @@
   </header>
   <main>
     <section class="tour">
-      <div class="conteiner">
+      <div class="container">
         <div class="tour__content">
-          <h2>
+          <h2 class="title tour__title">
             Выбери свой тур
           </h2>
           <ul class="tour__list">
@@ -234,9 +234,9 @@
       </div>
     </section>
     <section class="tour-form">
-      <div class="conteiner">
-        <div class="title-content">
-          <h2>Собери свой тур</h2>
+      <div class="container">
+        <div class="title-content tour-form__title-wrapper">
+          <h2 class="title tour-form__title">Собери свой тур</h2>
           <p>Идейные соображения высшего порядка, а также рамки и место обучения кадров</p>
         </div>
         <form class="form" action="">
@@ -316,16 +316,16 @@
       </div>
     </section>
     <section class="reviews">
-      <div class="conteiner">
-        <div class="title-content">
-          <h2>Отзывы наших<br>путешественников</h2>
+      <div class="container">
+        <div class="title-content reviews__title-wrapper">
+          <h2 class="title reviews__title">Отзывы наших<br>путешественников</h2>
           <p>Идейные соображения высшего порядка, а также рамки и место обучения кадров</p>
         </div>
         <ul class="reviews__list">
           <li class="reviews__item">
             <article class="reviews__article">
               <p class="reviews__text">
-                Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании новых предложений. Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции позволяет оценить значение модели развития.
+                Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании новых предложений. Идейные соображения высшего порядка, а также начало повседневной работы&nbsp;по формированию позиции позволяет оценить значение модели развития.
               </p>
               <footer class="reviews__footer">
                 <div class="reviews__footer-wrapper">
@@ -381,8 +381,8 @@
       </div>
     </section>
     <section class="gallery">
-        <div class="title-content">
-          <h2>Фотографии путешествий</h2>
+        <div class="title-content gallery__title-wrapper">
+          <h2 class="title gallery__title">Фотографии путешествий</h2>
           <p>Идейные соображения высшего порядка, а также рамки и место обучения кадров</p>
         </div>
         <div class="gallery__inner">
@@ -473,9 +473,9 @@
         </div>
     </section>
     <section class="stories">
-      <div class="conteiner">
-        <div class="title-content">
-          <h2>Истории путешествий</h2>
+      <div class="container">
+        <div class="title-content stories__title-wrapper">
+          <h2 class="title stories__title">Истории путешествий</h2>
           <p>Идейные соображения высшего порядка, а также рамки и место обучения кадров</p>
         </div>
         <ul class="stories__list">
@@ -597,7 +597,7 @@
       </div>
     </section>
     <section class="connection">
-      <div class="conteiner">
+      <div class="container">
         <div class="connection__inner">
         <div class="connection__logo">
           <picture>
@@ -607,7 +607,7 @@
         </div>
         <div class="connection__text">
           <h2>Пора в путешествие вместе с нами!</h2>
-          <p>Напиши на почту и узнай подробности на <a href="mailto:yourtour@gmail.com" title="yourtour@gmail.com">yourtour@gmail.com</a></p>
+          <p>Напиши на почту и узнай подробности на&nbsp;<a href="mailto:yourtour@gmail.com" title="yourtour@gmail.com">yourtour@gmail.com</a></p>
         </div>
       </div>
       </div>
