added links tel:

--- a/src/index.html
+++ b/src/index.html
@@ -38,21 +38,21 @@
       <nav class="navigation__navbar">
           <ul class="navigation__list">
             <li class="navigation__item">
-              <a class="navigation__link" href="">Туры</a>
+              <a class="navigation__link" href="/">Туры</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link" href="">Создать тур</a>
+              <a class="navigation__link" href="/">Создать тур</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link" href="">Отзывы</a>
+              <a class="navigation__link" href="/">Отзывы</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link" href="">Истории</a>
+              <a class="navigation__link" href="/">Истории</a>
             </li>
           </ul>
       </nav>
       </div>
-      <a class="navigation__phone" href="">+7 999 999 99 99</a>
+      <a class="navigation__phone" href="tel:+79999999999">+7 999 999 99 99</a>
     </div>
   </div>
   <header class="header header__inner">
